# theDAW

./: .gitignore  CMakeLists.txt
asiosdk_2.3.3/common/: asio.cpp  asio.h
asiosdk_2.3.3/host/pc/: asiolist.cpp
asiosdk_2.3.3/host/sample/: hostsample.cpp
src/: main.cpp
src/backend/: asiobackend.cpp  asiobackend.hpp  asiobackendutil.cpp  asiobackendutil.hpp  distortion.cpp  distortion.hpp  effect.hpp  ringbuffer.hpp  simdutil.hpp  spscringbuffer.hpp
src/backend/test/: ringbuffertest.cpp  spscqueuetest.cpp
src/gui/: guiutil.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  waveview.hpp
src/gui/graphics/: waveview.hpp
src/math/: fft.hpp  mathutil.hpp
src/math/test/: ffttest.cpp
src/math/test/data/: fft_test_128.txt  fft_test_48000.txt
src/prototype/: audiodata.py  dft.py  distortion.py  fft.py  lowpassfilter  lowpassfilter.py
